# MeloHeal

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
shared/: supabase.js
shared/components/: AuthModal.jsx
src/: App.jsx  error-logger.js  index.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.jsx  Skeleton.jsx  SongFormModal.jsx  TabPlaylists.jsx  TabRandom.jsx  TabSettings.jsx  TabSongs.jsx  TabStats.jsx
src/hooks/: useSongStore.js
src/lib/: i18n.js  songs.js  songs.test.js
src/lib/locales/: en.js  zh.js
src/styles/: tokens.css
